--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
        <h1>JavaScript Course</h1> 
 
        <div>
-           
+           <h2>Script</h2>
+
        </div>
 
+       <div>
+           <h2>Output</h2>
+           
+       </div>
 
     <script src="main.js"></script>
 </body>
