--- a/markup/index.html
+++ b/markup/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>TASKMANAGER</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div style="display: none">
-      <svg>
+        <svg>
         <symbol
           id="wave"
           viewBox="0 0 159 10"
@@ -35,17 +33,11 @@
     </div>
 
     <main class="main">
-      <section class="main__control control container">
-        <h1 class="control__title">TASKMANAGER</h1>
-        <section class="control__btn-wrap">
-          <input
-            type="radio"
-            name="control"
-            id="control__new-task"
-            class="control__input visually-hidden"
-          />
-          <label for="control__new-task" class="control__label control__label--new-task"
-            >+ ADD NEW TASK</label
+        <section class="main__control control container">
+            <h1 class="control__title">TASKMANAGER</h1>
+            <section class="control__btn-wrap">
+                <input type="radio" name="control" id="control__new-task" class="control__input visually-hidden" />
+                <label for="control__new-task" class="control__label control__label--new-task">+ ADD NEW TASK</label
           >
           <input
             type="radio"
@@ -55,14 +47,8 @@
             checked
           />
           <label for="control__task" class="control__label">TASKS</label>
-          <input
-            type="radio"
-            name="control"
-            id="control__statistic"
-            class="control__input visually-hidden"
-          />
-          <label for="control__statistic" class="control__label"
-            >STATISTICS</label
+                <input type="radio" name="control" id="control__statistic" class="control__input visually-hidden" />
+                <label for="control__statistic" class="control__label">STATISTICS</label
           >
         </section>
       </section>
